--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: UltimaFlorDoLacio
-Title: What the Package Does (One Line, Title Case)
+Title: Random Texts in Portuguese by Famous Authors
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Carlos", "de Moura", , "contact@carlosdemoura.com", role = c("aut", "cre"))
+Description: Each main function is intended to give random quotes from authors who wrote in Portuguese. The user can set the seed - if no seed is given, the current system day is set as the seed. The functions are named after these authors and the quotes were extracted from public repositories.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
