--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports:
+    purrr,
+    rvest,
+    utils
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
